<resources>
    <string name="app_name">CentanetApp</string>
    <!--splash page-->
    <string name="no_storage_permission_msg">未能获取文件读取权限，请重启并授权</string>
    <string name="no_location_permission_msg">未能获取定位权限。</string>
    <!--guild page-->
    <string name="access_btn_text">开启我的中原</string>

    <!--login page-->
    <string name="yaoqingma_btn_text">邀请码登录</string>
    <string name="login_phone">手机快捷登录</string>
    <string name="login_unregistered">未注册手机将自动创建账号</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_invite_code_hint">请输入邀请码</string>
    <string name="login_invite_next_text">下一步</string>
    <string name="login_bottom_text">登录即视为同意《中原地产用户协议》</string>
</resources>
